--- a/KaggleNLPWithDisasterTweets.ipynb
+++ b/KaggleNLPWithDisasterTweets.ipynb
@@ -223,7 +223,7 @@
       "source": [
         "# Estimator\n",
         "\n",
-        "For classification we can use a [DNN Classifier](https://www.tensorflow.org/api_docs/python/tf/estimator/DNNClassifier) (note further remarks about different modelling of the label function at the end of the tutorial)."
+        "For classification we can use a [DNN Classifier](https://www.tensorflow.org/api_docs/python/tf/estimator/DNNClassifier)"
       ]
     },
     {
